<resources>
    <string name="app_name">Quick Check-in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email-id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hint">hint</string>
    <string name="loginlogo">LOGINLOGO</string>
    <string name="signuplogo">SIGNUP_LOGO</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="Emailverification">Email verification link has been send to below email address</string>
    <string name="send_link">Send Link</string>
    <string name="refresh">Refresh</string>
    <string name="email_verification">Email Verification</string>
    <string name="reset_passoword">Reset Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="please_enter_email_id_to_send_reset_password_link">Please enter email-id to send reset password link.</string>
    <string name="click_on_send_link_button_to_get_verification_link">Click on send link button to get verification link.</string>
    <string name="next">Next</string>
    <string name="booking_id">Booking Id</string>
    <string name="booking_details">Booking Details</string>
    <string name="lead_guest">Guest name</string>
    <string name="shrey_soni">shrey soni</string>
    <string name="NA">NA</string>
    <string name="please_upload_identity_proof_passport_aadhar_card">Please Upload Identity Proof (Passport / Aadhar Card)</string>
    <string name="upload_image">Upload Image</string>
    <string name="click_image">Click Image</string>
    <string name="check_in">Check in</string>
    <string name="please_provide_your_sognature_below">Please provide your signature below</string>
    <string name="verify_document">Verify Document</string>
    <string name="clear_sign">Clear Sign</string>
    <string name="happy_stay">HAPPY STAY</string>
    <string name="Check_in_Page">PLEASE COLLECT DOOR KEY-CARD FROM FRONT DESK.</string>
    <string name="floor_no">Floor No</string>
    <string name="we_hope_u_have_wonderful_stay_with_us_and_if_there_is_anything_more_we_can_do_to_help_please_do_not_hesitate_to_contact_reception">We hope u have wonderful stay with us,and if there is anything more we can do to , help please do not hesitate to contact reception.</string>
    <string name="your_room_details">Your room Details</string>
    <string name="room_no">Room No</string>
    <string name="check_in_date_and_time">Check-in date and time</string>
    <string name="no_of_guest">No of guest</string>
    <string name="check_out_date_and_time">Check-out date and time</string>
    <string name="room_type">Room type</string>
    <string name="please_enter_booking_id">Please enter booking-id</string>
    <string name="sucess">sucess</string>
</resources>