<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".Loginscreen">

    <include
        android:id="@+id/include"
        layout="@layout/activity_loginbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-89dp" />

    <ImageView
        android:id="@+id/LoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/loginlogo"
        android:src="@mipmap/login_logo14_4x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email_input_box"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/email_id"
        android:textColorHint="@color/colorPrimary"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:counterTextColor="@color/colorPrimary"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"
   />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password_input_box"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Email_input_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxCornerRadiusTopStart="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        app:passwordToggleEnabled="true"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textVisiblePassword"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal"
            android:fontFamily="@font/ubuntu"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Login_Btn"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/login_btn_corner_radius"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Reset_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_input_box" />

    <Button
        android:id="@+id/SignUP_Btn"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/signup_btn"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/ubuntu"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/signup_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Login_Btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Login_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Reset_Btn" />

    <Button
        android:id="@+id/Reset_Btn"
        style="@style/Signup_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/ubuntu"
        android:text="@string/reset_passoword"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SignUP_Btn"
        app:layout_constraintEnd_toEndOf="@+id/Login_Btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Login_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Login_Btn" />

    <ProgressBar
        android:id="@+id/Login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="26dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/Login_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_input_box" />

</androidx.constraintlayout.widget.ConstraintLayout>